Outout im JOSN Format
Das SDL-Eumel wirft jetzt eine Weltbeschreibung im JSON-Format aus,
damit Visualisierungs-Clients was zum Testen haben. Erstmal nur eine
Liste an Planeten, als nächstes kommen aber auch Raumschiffe die die
geklickte Route abfliegen.

--- a/gitter/Makefile
+++ b/gitter/Makefile
@@ -2,7 +2,7 @@ CXX = gcc
 FLAGS = -Wall -g3 -O2 -march=native -mtune=native
 CLIBS = `sdl-config --cflags`
 LDFLAGS = `sdl-config --libs` -lSDL_gfx  -lm -lpthread
-OBJ = main.o screen.o route.o
+OBJ = main.o screen.o route.o json_output.o
 
 main: $(OBJ)
 	$(CXX) $(FLAGS) $(LDFLAGS) -o $@ $(OBJ) 
