umstellung auf std=gnu99

--- a/logging/Makefile
+++ b/logging/Makefile
@@ -1,8 +1,10 @@
 
 
 all:
-		gcc -c logging.c -o logging.o
+		gcc -std=gnu99 -c logging.c -o logging.o
+		# ar cr liblogging.a logging.o
 
 
 clean:
-		rm -f logging.o
+		rm -f logging.o 
+		# liblogging.a
