--- a/net/test/Makefile
+++ b/net/test/Makefile
@@ -3,9 +3,12 @@
 
 all:
 		gcc test_map_push.c -o test_map_push -std=gnu99
+		# gcc test_select.c -o test_select -std=gnu99 -lrt
+		# gcc test_shm.c -o test_shm -std=gnu99 -lrt
+		# gcc test_bind.c -o test_bind -std=gnu99
 
 
 clean:
-		rm test_map_push
+		rm -f test_map_push
 
 
