--- a/server/Makefile
+++ b/server/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
-FLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe `pkg-config lua5.1 --cflags`
+FLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe `pkg-config lua5.1 --cflags` 
 CLIBS =
-LDFLAGS = -lm `pkg-config lua5.1 --libs`
+LDFLAGS = -lm `pkg-config lua5.1 --libs` -Wl,-O1 -Wl,--as-needed
 OBJ = main.o entities.o vector.o map.o ship.o luastate.o luafuncs.o
 
 main: $(OBJ)
