anfaenge des "ich interagiere mit dem user"-dingens

--- a/net/Makefile
+++ b/net/Makefile
@@ -1,11 +1,16 @@
 CC = gcc
 CFLAGS = -std=gnu99 -DNET_HAVE_MAIN -I../logging -g3
 LDFLAGS = -lrt
-OBJ = network.o net.o ../logging/logging.o
+OBJ_NET = network.o net.o ../logging/logging.o
+OBJ_TALK = network.o talk.o ../logging/logging.o
 
+all: talk net
 
-net: $(OBJ)
-		$(CC) $(LDFLAGS) -o $@ $(OBJ) 
+talk: $(OBJ_TALK)
+		$(CC) $(LDFLAGS) -o $@ $(OBJ_TALK)
+
+net: $(OBJ_NET)
+		$(CC) $(LDFLAGS) -o $@ $(OBJ_NET) 
 
 %.o: %.c %.h
 		$(CC) $(CFLAGS) -c $< 
@@ -15,6 +20,6 @@ net: $(OBJ)
 
 .PHONY : clean
 clean:
-		rm -f *.o net
+		rm -f *.o net talk
 
 
