Started code for json output
(Currently quite limited, and only what we need for debugging)

--- a/server/Makefile
+++ b/server/Makefile
@@ -2,7 +2,7 @@ CC = gcc
 FLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe `pkg-config lua5.1 --cflags`
 CLIBS =
 LDFLAGS = -lm `pkg-config lua5.1 --libs` -Wl,-O1 -Wl,--as-needed
-OBJ = main.o entities.o vector.o map.o ship.o luastate.o luafuncs.o physics.o route.o config.o
+OBJ = main.o entities.o vector.o map.o ship.o luastate.o luafuncs.o physics.o route.o config.o json_output.o
 
 main: $(OBJ)
 	$(CC) $(FLAGS) $(LDFLAGS) -o $@ $(OBJ) 
