add: debug.h and ported most messages to it

--- a/server/Makefile
+++ b/server/Makefile
@@ -4,6 +4,7 @@ CLIBS =
 LDFLAGS = -lm `pkg-config lua5.1 --libs` -Wl,-O1 -Wl,--as-needed
 OBJ = main.o entities.o vector.o map.o ship.o luastate.o luafuncs.o physics.o route.o config.o json_output.o
 
+
 main: $(OBJ)
 	$(CC) $(FLAGS) $(LDFLAGS) -o $@ $(OBJ) 
 
@@ -13,6 +14,10 @@ main: $(OBJ)
 %.o: %.c 
 	$(CC) $(FLAGS) $(CLIBS) -c $< 
 
-.PHONY : clean
+.PHONY : clean debug
 clean:
 	rm -f *.s *.o main
+
+debug: FLAGS += -DENABLE_DEBUG
+
+debug: main
