--- a/logging/Makefile
+++ b/logging/Makefile
@@ -1,10 +1,12 @@
-
+CC = gcc
+CFLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe -std=gnu99
 
 all:
-		gcc -std=gnu99 -c logging.c -o logging.o
+		$(CC) $(CFLAGS) -c logging.c -o logging.o
 		# ar cr liblogging.a logging.o
 
+.PHONY: clean
 
 clean:
-		rm -f logging.o 
+		-rm -f logging.o
 		# liblogging.a
