--- a/net/Makefile
+++ b/net/Makefile
@@ -1,7 +1,7 @@
 CC = gcc
-CFLAGS = -std=gnu99 -DNET_HAVE_MAIN -I../logging -g3
+CFLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe -std=gnu99 -I../logging
 LDFLAGS = -lrt
-OBJ_NET = network.o net.o ../logging/logging.o
+OBJ_NET = network.o net.o net_test.o ../logging/logging.o
 OBJ_TALK = network.o talk.o ../logging/logging.o
 
 all: talk net
@@ -10,16 +10,14 @@ talk: $(OBJ_TALK)
 		$(CC) $(LDFLAGS) -o $@ $(OBJ_TALK)
 
 net: $(OBJ_NET)
-		$(CC) $(LDFLAGS) -o $@ $(OBJ_NET) 
+		$(CC) $(LDFLAGS) -o $@ $(OBJ_NET)
 
 %.o: %.c %.h
-		$(CC) $(CFLAGS) -c $< 
+		$(CC) $(CFLAGS) -c $<
 
-%.o: %.c 
-		$(CC) $(CFLAGS) -c $< 
+%.o: %.c
+		$(CC) $(CFLAGS) -c $<
 
 .PHONY : clean
 clean:
 		rm -f *.o net talk
-
-
