--- a/net/Makefile
+++ b/net/Makefile
@@ -1,8 +1,8 @@
 CC = gcc
 CFLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe -std=gnu99 -I../logging
-LDFLAGS = -lrt
+LDFLAGS = -lrt -lssl
 OBJ_NET = network.o net.o net_test.o ../logging/logging.o
-OBJ_TALK = network.o talk.o ../logging/logging.o
+OBJ_TALK = network.o pstr.o talk.o ../logging/logging.o
 
 all: talk net
 
