--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,5 +1,5 @@
 CXX = gcc
-FLAGS = -Wall -g3 -O2 -march=native -mtune=native
+FLAGS = -Wall -g3 -O2 -march=native -mtune=native -std=gnu99
 CLIBS = `sdl-config --cflags` -I ~/include
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
 OBJ = buffer.o json.o main.o sdl.o
