--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,8 +1,8 @@
 CXX = gcc
 FLAGS = -Wall -g3 -O2 -march=native -mtune=native -std=gnu99
-CLIBS = `sdl-config --cflags` -I ~/include
+CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
-OBJ = buffer.o json.o main.o sdl.o
+OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o
 
 main: $(OBJ)
 	$(CXX) $(FLAGS) $(LDFLAGS) -o $@ $(OBJ)
