SDLview: pack most globals into a struct

--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,8 +1,16 @@
-CC = gcc
-FLAGS = -Wall -g3 -O2 -march=native -mtune=native -std=c99
+CC = clang
+#CC = gcc
+FLAGS = -Wall -g3 -O2 -march=native -mtune=native
 CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
 OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o
+
+ifeq ($(CC),gcc)
+	FLAGS += -fms-extensions -std=c99
+endif
+ifeq ($(CC),clang)
+	FLAGS += -D__STDC__ -Wno-empty-body
+endif
 
 main: $(OBJ)
 	$(CC) $(FLAGS) $(LDFLAGS) -o $@ $(OBJ)
