SDLview: put even more in options_t and temporarily fix compilations

--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,9 +1,9 @@
-CC = clang
-#CC = gcc
+#CC = clang
+CC = gcc
 FLAGS = -Wall -g3 -O2 -march=native -mtune=native
 CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
-OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o
+OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o layerrenderers.o
 
 ifeq ($(CC),gcc)
 	FLAGS += -fms-extensions -std=c99
