SDLview: split rendering into layers
TODO:
fix segfault generated randomly in sdl.c:create_buffer (252)
cache more layers (planets, asteroids)
background influence renderer

--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,6 +1,6 @@
 #CC = clang
 CC = gcc
-FLAGS = -Wall -g3 -O2 -march=native -mtune=native
+FLAGS = -Wall -g3 -O3 -march=native -mtune=native -fopenmp 
 CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
 OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o layerrenderers.o
