--- a/net/Makefile
+++ b/net/Makefile
@@ -1,6 +1,6 @@
 CC = gcc
 CFLAGS = -Wall -g3 -O2 -march=native -mtune=native -pipe -std=gnu99 -I../logging
-LDFLAGS = -lrt -lssl
+LDFLAGS = -lrt -lssl -lcrypto
 OBJ_NET = network.o pstr.o net.o net_test.o ../logging/logging.o
 OBJ_TALK = network.o pstr.o talk_test.o userstuff.o dispatch.o talk.o ../logging/logging.o
 
