--- a/viewer/SDLview/Makefile
+++ b/viewer/SDLview/Makefile
@@ -1,6 +1,6 @@
 #CC = clang
 CC = gcc
-FLAGS = -Wall -g3 -O3 -march=native -mtune=native -fopenmp
+FLAGS = -Wall -g3 -O3 -march=native -mtune=native 
 CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
 LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
 OBJ = buffer.o json.o main.o sdl.o ../../net/pstr.o layerrenderers.o snapshot.o
