--- a/viewer/StatusBoard/Makefile
+++ b/viewer/StatusBoard/Makefile
@@ -1,16 +1,16 @@
 #CC = clang
 CC = gcc
-FLAGS = -Wall -g3 -O3 -march=native -mtune=native 
-CLIBS = `sdl-config --cflags` -I ~/include -I ../../net
-LDFLAGS = `sdl-config --libs` -L ~/lib -lSDL_gfx -lSDL_image -lSDL_ttf -lm -lpthread -ljansson
-LOCALOBJ = sdl.o layerrenderers.o
+FLAGS = -Wall -g3 -O2 -march=native -mtune=native -D_GNU_SOURCE=1 -D_REENTRANT
+CLIBS = -I ~/include -I ../../net
+LDFLAGS = -L ~/lib -lm -lpthread -ljansson
+LOCALOBJ = statusboard.o
 REMOTEOBJ = ../ClientLib/buffer.o ../ClientLib/json.o ../ClientLib/main.o ../ClientLib/snapshot.o ../../net/pstr.o
 
 ifeq ($(CC),gcc)
 	FLAGS += -fms-extensions -std=c99
 endif
 ifeq ($(CC),clang)
-	FLAGS += -D__STDC__ -Wno-empty-body -Wno-unknown-pragmas
+	FLAGS += -D__STDC__ -Wno-empty-body
 endif
 
 main: $(LOCALOBJ) $(REMOTEOBJ) Makefile ClientLib
